# conformalized-xplainable-malaria

./: .gitignore  Makefile  README.md  app_demo.py  benchmark.ipynb  compressed_images.sh  pyproject.toml
data/processed/: malaria.yaml  test_coco.json
data/processed/dataset/labels/: test.cache  train.cache
data/processed/dataset/labels/test/: 010961af-b38c-49de-aca0-e3732d73d414.txt  0346611b-ea43-45bd-9f16-c6e8086273d2.txt  03be08c8-2cf3-4de6-8ac6-5f7817a6a643.txt  06bbcd42-3ba8-4476-8804-8455f56dd928.txt  0864c569-2ad7-48ed-b12a-e40aa5b93756.txt  087602a2-288b-4a4d-b01a-524f0d799d89.txt  0897f682-5301-49fc-a8d5-9df7762040bb.txt  0a3b53c7-e7ab-4135-80aa-fd2079d727d6.txt  0e0bc36f-6fb2-4763-b0a1-b4c67b2d2d2a.txt  15625643-d964-4b14-9839-c126384ae35b.txt  15a5849d-8bc7-4e01-938b-c1f55067787d.txt  1b814efc-7bf9-40ae-8e13-49dc2c04732f.txt  (+108 more)
notebooks/: benchmark.ipynb  preprocessing.ipynb  run_conformal_on_subset.ipynb  yolo_crop_and_mask.ipynb
output/conformal_subset/: conformal_subset_benchmark.csv  conformal_subset_by_stage.csv  conformal_subset_results.csv
output/detectron2/: events.out.tfevents.1764960819.B660M-Phantom-Gaming-4.17201.0  events.out.tfevents.1764961056.B660M-Phantom-Gaming-4.17695.0  events.out.tfevents.1764964724.B660M-Phantom-Gaming-4.26717.0  instances_predictions.pth
output/yolo/detect/train2/: args.yaml
output_detectron2/: coco_instances_results.json  instances_predictions.pth  metrics.json
references/: eda-data.ipynb
runs_yolo/detect/train2/: results.csv
utils/: coco2yolo.ipynb  split-folders.ipynb
(+1208 files in other folders)
