[tool.poetry]
name = "Conformalized Xplainable Malaria"
version = "0.0.1"
description = " "
authors = ["Mateus Balda <mateusbalda89@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<=3.12.7"
numpy = "^2.3.3"
pandas = "^2.3.3"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
scikit-learn = "^1.7.2"
plotly = "^6.3.1"
scipy = "^1.16.2"
statsmodels = "^0.14.5"
xgboost = "^3.1.1"
shap = "^0.49.1"
imblearn = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"